test/libsolidity/syntaxTests/parsing/import_complex_invalid_from.sol
import {hello, world} from function;
// ----
// ParserError: (27-35): Expected import path.
